--- a/bokning.html
+++ b/bokning.html
@@ -42,7 +42,7 @@
                 <p>📧 <strong>E-post:</strong> <a href="mailto:arman_mike@hotmail.com">arman_mike@hotmail.com</a></p>
             </div>
             <div class="about-image">
-                <img src="images/workshop.jpg" alt="Bild på bilverkstad">
+                <img src="images/verktyg.jpg" alt="Bild på bilverkstad">
             </div>
         </div>
     </section>
