--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p>Vi strävar efter att ge snabb och pålitlig service med hög kvalitet. Vårt mål är att du som kund alltid ska
             känna dig nöjd och trygg när du lämnar din bil hos oss.</p>
 
-        <img src="images/bilverkstad.jpg" alt="Dosti Bilverkstad">
+        <img src="images/verktyg.jpg" alt="Bild på bilverkstad">
 
         <h3>Kontakta oss</h3>
         <h3>Öppettider</h3>
